--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div>
     <ul style="list-style-type:none;">
       <li>
-        <a href="https://github.com/vichitr/Process-Scheduler/blob/master/src/fcfs.html"> First Come First Served </a>
+        <a href="Process-Scheduler/src/fcfs.html"> First Come First Served </a>
       </li>
       <li>
         <a href="/src/sjf.html"> Shortest Job First </a>
