--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
   <title> Process Scheduling</title>
-  <script type="text/javascript" src="/js/index.js"></script>
-  <link rel="stylesheet" href="/css/index.css"></link>
+  <script type="text/javascript" src="js/index.js"></script>
+  <link rel="stylesheet" href="css/index.css"></link>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 
   <meta charset="UTF-8">
@@ -16,19 +16,19 @@
   <div>
     <ul style="list-style-type:none;">
       <li>
-        <a href="Process-Scheduler/src/fcfs.html"> First Come First Served </a>
+        <a href="src/fcfs.html"> First Come First Served </a>
       </li>
       <li>
-        <a href="/src/sjf.html"> Shortest Job First </a>
+        <a href="src/sjf.html"> Shortest Job First </a>
       </li>
       <li>
-        <a href="/src/rr.html"> Round Robin Scheduling </a>
+        <a href="src/rr.html"> Round Robin Scheduling </a>
       </li>
       <li>
-        <a href="/src/srtf.html"> Shortest Remaining Time First </a>
+        <a href="src/srtf.html"> Shortest Remaining Time First </a>
       </li>
       <li>
-        <a href="/src/priority.html"> Priority Scheduling </a>
+        <a href="src/priority.html"> Priority Scheduling </a>
       </li>
     </ul>
   </div>
