--- a/src/fcfs.html
+++ b/src/fcfs.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title> FCFS </title>
-  <script type="text/javascript" src="/js/index.js"></script>
-  <link rel="stylesheet" href="/css/index.css"></link>
+  <script type="text/javascript" src="js/index.js"></script>
+  <link rel="stylesheet" href="css/index.css"></link>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 </head>
 <body>
