--- a/src/fcfs.html
+++ b/src/fcfs.html
@@ -21,15 +21,19 @@
         <button class="btn btn-success" onclick="addToList()" style="float:left;margin-left:10px;">Add</button>
     </div>
     <br>
-    <button class="btn btn-success" onclick="showOutput()" style="float:right; margin-right: 50px;">Schedule</button>
+    <div>
+        <button class="btn btn-success" onclick="clearData()" style="float:right; margin-right: 50px;">Clear Data</button>
+        <button class="btn btn-success" onclick="showOutput()" style="float:right; margin-right: 50px;">Schedule</button>
+    </div>
     <br>
-    <br />
-    <br />
-    <br />
+    <br>
+    <br>
+    <br>
     <div>
         <h2 style="text-align:center;"> Gantt Chart</h2>
         <br />
         <div id="gantt"></div>
+        <div id="timer"></div>
         <br /><br />
         <div>
             <div style="width: 50%; text-align:center;float:left; font-size: 20px;" id="awt1">
