--- a/src/fcfs.html
+++ b/src/fcfs.html
@@ -6,8 +6,10 @@
   <link rel="stylesheet" type="text/css" href="../css/index.css"></link>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 </head>
-<body>
-    <h1> FCFS Scheduling </h1>
+<body style="background-color:#8c9eff;">
+    <h1 style="text-align:center;"> FCFS Scheduling </h1>
+    <br />
+    <br />
     <div id="showinput"></div>
     <div id="inputsection" class="card" style="width:100%;float:left;">
         <div style="width: 300px; float:left;text-align:left; margin-left: 20px;">
@@ -23,14 +25,14 @@
     <br>
     <div>
         <button class="btn btn-success" onclick="clearData()" style="float:right; margin-right: 50px;">Clear Data</button>
-        <button class="btn btn-success" onclick="showOutput()" style="float:right; margin-right: 50px;">Schedule</button>
+        <button class="btn btn-success" onclick="showOutput(0)" style="float:right; margin-right: 50px;">Schedule</button>
     </div>
     <br>
     <br>
     <br>
     <br>
     <div>
-        <h2 style="text-align:center;"> Gantt Chart</h2>
+        <h2 id ="chart-header" style="text-align:center;"></h2>
         <br />
         <div id="gantt"></div>
         <div id="timer"></div>
@@ -45,26 +47,17 @@
     <br>
     <br>
     <div>
-        <h3 style="text-align:center;">Operations taken place in CPU</h3>
+        <h3 id="operations-heading" style="text-align:center;"></h3>
         <div id="operations"></div>
     </div>
     <br /><br />
     <div>
-        <h2 style="text-align:center;">Output Table</h2>
+        <h2 id="table-heading" style="text-align:center;"></h2>
         <div>
             <table id="tab" class="table bordered centered responsive-table" style="border-color: black; border-width: 2px; align: center; bgcolor: white; cellspacing: 10px;">
-                <thead>
-                    <tr id="thead">
-                        <th>Process ID</th>
-                        <th>Arrival Time</th>
-                        <th>Burst Time</th>
-                        <th>Completion Time</th>
-                        <th>Waiting Time</th>
-                        <th>Turnaround Time</th>
-                    </tr>
+                <thead id="thead">
                 </thead>
                 <tbody id="ptable">
-
                 </tbody>
             </table>
         </div>
