linked to js file

--- a/src/sjf.html
+++ b/src/sjf.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title> SJF Scheduling </title>
-    <script type="text/javascript" src="C:\Users\Vichitr Gandas\source\repos\WebApplication1\WebApplication1\js\index.js"></script>
-    <link rel="stylesheet" href="C:\Users\Vichitr Gandas\source\repos\WebApplication1\WebApplication1\css\index.css"></link>
+    <script type="text/javascript" src="../js/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/index.css"></link>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 </head>
 <body style="background-color:#8c9eff;">
