--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="Vichitr Gandas">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body style="background-color:#68164C;">
   <h1 style="text-align: center; font: Monotype">Process Scheduling</h1>
   <div>
     <ul style="list-style-type:none;">
