--- a/src/rr.html
+++ b/src/rr.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../css/index.css"></link>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 </head>
-<body style="background-color:#8c9eff;">
+<body style="background-color:#68164C;">
     <h1 style="text-align:center;"> Round Robin Scheduling </h1>
     <br />
     <br />
