--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <head>
   <title> Process Scheduling</title>
+	
+  <!-- Meta Tags -->
+  <meta charset="UTF-8">
+  <meta name="description" content="OS Simulator">
+  <meta name="keywords" content="HTML,CSS,JavaScript, OS">
+  <meta name="author" content="Vichitr Gandas">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- JS Files -->
   <script type="text/javascript" src="js/index.js"></script>
+
+  <!-- CSS Files -->
   <link rel="stylesheet" href="css/index.css"></link>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 
-  <meta charset="UTF-8">
-	<meta name="description" content="Project Demo">
-	<meta name="keywords" content="HTML,CSS,JavaScript">
-	<meta name="author" content="Vichitr Gandas">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body style="background-color:#68164C;">
   <h1 style="text-align: center; font: Monotype">Process Scheduling</h1>
