--- a/src/sjf.html
+++ b/src/sjf.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" type="text/css" href="../css/index.css"></link>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 </head>
-<body style="background-color:#68164C;">
+<body style="background-color:#931F6C;">
     <h1 style="text-align:center;"> SJF Scheduling </h1>
     <br />
     <br />
     <div id="showinput"></div>
-    <div id="inputsection" class="card" style="width:100%;float:left;">
+    <div id="inputsection" class="card" style="width:100%;float:left;background-color:#931F6C;">
         <div style="width: 300px; float:left;text-align:left; margin-left: 20px;">
             Arrival Time:
             <input style="width:50px;" id="newat" class="form-control" type="text" value=""></input>
@@ -52,7 +52,7 @@
     </div>
     <br /><br />
     <div>
-        <h2 id="table-heading" style="text-align:center;"></h2>
+        <h3 id="table-heading" style="text-align:center;"></h3>
         <div>
             <table id="tab" class="table bordered centered responsive-table" style="border-color: black; border-width: 2px; align: center; bgcolor: white; cellspacing: 10px;">
                 <thead id="thead">
