--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
 
 </head>
-<body style="background-color:#68164C;">
+<body style="background-color:#931F6C;">
   <h1 style="text-align: center; font: Monotype">Process Scheduling</h1>
   <div>
     <ul style="list-style-type:none;">
