--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
   <div>
     <ul style="list-style-type:none;">
       <li>
-        <a href="src/fcfs.html"> First Come First Served </a>
+        <a href="src/fcfs.html"> First Come First Served (FCFS)</a>
       </li>
       <li>
-        <a href="src/sjf.html"> Shortest Job First </a>
+        <a href="src/sjf.html"> Shortest Job First (SJF)</a>
       </li>
       <li>
-        <a href="src/rr.html"> Round Robin Scheduling </a>
+        <a href="src/rr.html"> Round Robin Scheduling (RR) </a>
       </li>
       <li>
-        <a href="src/srtf.html"> Shortest Remaining Time First </a>
+        <a href="src/srtf.html"> Shortest Remaining Time First (SRTF) </a>
       </li>
       <li>
         <a href="src/priority.html"> Priority Scheduling </a>
